8296754: AutoCreateSharedArchive in JDK 20 is not compatible with JDK 19